Issue #3448104 by Redwan Jamous: Fix options inside styles dropdown in CKEditor5 are not fully visible

--- a/scss/theme/vlb-enhancements.base.scss
+++ b/scss/theme/vlb-enhancements.base.scss
@@ -348,10 +348,12 @@ body {
 
   button,
   input[type="submit"] {
-    width: auto !important;
+    &:not(.ck-editor *) {
+      width: auto !important;
 
-    &.button--primary {
-      text-align: center;
+      &.button--primary {
+        text-align: center;
+      }
     }
   }
 
